--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^2.9.10",
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.4.10",
