--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react-modal": "^3.13.1",
     "axios": "^1.2.6",
     "react": "^18.2.0",
