--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-modal": "^3.13.1",
     "axios": "^1.3.5",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-modal": "^3.16.1",
@@ -33,6 +35,7 @@
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.34",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
