--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "date-fns": "^2.29.3",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-locize-backend": "^6.2.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.2.2",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
